# cgkit1

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  README.txt  _slparser.g  _slparser.py  cgkit1-1.2.2.tar.gz.delta  cgkit1-1.2.2.tar.gz.id  cgkit1-1.2.3.tar.gz.delta  cgkit1-1.2.3.tar.gz.id  cgkitinfo.py  cgtypes.c  cgtypes.pyx  changelog.txt  pyproject.toml  ri.py  riutil.py  setup.py  sl.py  slparams.py  sltokenize.py
.github/workflows/: test.yml
examples/colorspheres/: colorspheres.py
examples/companion/: l2.1.py  l2.2.py  l2.3.py  l2.4.py  l2.5.py  l2.7.py  l2.8.py  l4.1.py
pycgtypes/: __init__.py  mat3.py  mat4.py  quat.py  vec3.py  vec4.py
src/: noisemodule.cpp  noisetabs.h
