[project]
name = "cgkit1"
version = "1.3.2"                                                        # also update cgkitinfo.py
description = "Python Computer Graphics Kit v1"
readme = "README.md"
requires-python = ">= 3.9"
license = "BSD-3-Clause"
authors = [{ name = "Matthias Bass", email = "baas@ira.uka.de" }]
maintainers = [{ name = "Andrew Straw", email = "strawman@astraw.com" }]

urls.homepage = "https://github.com/strawlab/cgkit1"

[build-system]
# following advice in https://stackoverflow.com/a/66479252
requires = ["setuptools>=77", "cython >= 3.0"]
build-backend = "setuptools.build_meta"
